--- a/pages/welcome/welcome.wxml
+++ b/pages/welcome/welcome.wxml
@@ -2,7 +2,7 @@
   <image class="coffePage" src="/images/coffe/coffe01.jpg"></image>
   <text class="motto">Hello,雀巢咖啡</text>
 
-  <view class="journey-container">
+  <view class="journey-container" catchtap="onTapJump">
     <text class="journey">开启小程序之旅</text>
   </view>
 </view>
