设置动态导航栏标题

--- a/pages/post/post.wxml
+++ b/pages/post/post.wxml
@@ -23,6 +23,8 @@
   </swiper>
 
   <block wx:for="{{postList}}" wx:for-item="item" wx:for-index="idx" wx:key="post1">
-    <template is="postItemTpl" data="{{...item}}" />
+    <view catchtap="onTapToDetail" data-post-id="{{item.postId}}">
+      <template is="postItemTpl" data="{{...item}}" />
+    </view>
   </block>
 </view>
