--- a/pages/post/post-detail/post-detail.wxml
+++ b/pages/post/post-detail/post-detail.wxml
@@ -10,3 +10,19 @@
   </view>
   <text class="detail">{{post.detail}}</text>
 </view>
+
+<!-- 实现评论、收藏、点赞功能模板 -->
+<view class="tool">
+  <view class="tool-item" catchtap="onUpTap" data-post-id="{{post.postId}}">
+    <image src="/images/icon/wx_app_like.png"/>
+    <text>{{post.upNum}}</text>
+  </view>
+  <view class="tool-item comment" catchtap="onCommentTap" data-post-id="{{post.postId}}">
+    <image src="/images/icon/wx_app_message.png"/>
+    <text>{{post.commentNum}}</text>
+  </view>
+  <view class="tool-item" catchtap="onCollectionTap" data-post-id="{{post.postId}}">
+    <image src="/images/icon/wx_app_collect.png"/>
+    <text>{{post.collectionNum}}</text>
+  </view>
+</view>
