--- a/pages/post/post-comment/post-comment.wxml
+++ b/pages/post/post-comment/post-comment.wxml
@@ -1,9 +1,48 @@
 <!--pages/post/psot-comment/post-comment.wxml-->
 <view class="comment-detail-box">
-  <view class="comment-main-box">
-    <view class="comment-title">评论....(共{{comments.length}}条)</view>
+    <view class="comment-main-box">
+        <view class="comment-title">评论....(共{{comments.length}}条)</view>
+        <block wx:for="{{comments}}" wx:for-item="item" wx:for-index="idx">
 
-    
-  </view>
+            <view class="comment-item">
 
+                <view class="comment-item-header">
+
+                    <view class="left-img">
+                        <image src="{{item.avatar}}"></image>
+                    </view>
+
+                    <view class="right-user">
+                        <text class="user-name">{{item.username}}</text>
+                    </view>
+
+                </view>
+
+                <view class="comment-body">
+
+                    <view class="comment-txt" wx:if="{{item.content.txt}}">
+                        <text>{{item.content.txt}}</text>
+                    </view>
+
+                    <view class="comment-voice" wx:if="{{item.content.audio && item.content.audio.url}}">
+                        <!-- <view data-url="{{item.content.audio.url" class="comment-voice-item" catchtap="playAudio"> -->
+                        <view  class="comment-voice-item" catchtap="playAudio">
+                            <image src="/images/icon/wx_app_voice.png" class="voice-play"></image>
+                            <text>{{item.content.audio.timeLen}}</text>
+                        </view>
+                    </view>
+
+                    <view class="comment-img" wx:if="{{item.content.img.length!=0}}">
+                        <block wx:for="{{item.content.img}}" wx:for-item="img">
+                            <image src="{{img}}" mode="aspectFill"></image>
+                        </block>
+                    </view>
+
+                </view>
+
+                <view class="comment-time">{{item.create_time}}</view>
+
+            </view>
+        </block>
+    </view>
 </view>
