--- a/pages/post/post-comment/post-comment.wxml
+++ b/pages/post/post-comment/post-comment.wxml
@@ -33,8 +33,8 @@
                     </view>
 
                     <view class="comment-img" wx:if="{{item.content.img.length!=0}}">
-                        <block wx:for="{{item.content.img}}" wx:for-item="img">
-                            <image src="{{img}}" mode="aspectFill"></image>
+                        <block wx:for="{{item.content.img}}" wx:for-item="img" wx:for-index="imgIdx">
+                            <image src="{{img}}" mode="aspectFill" catchtap="previewImg" data-comment-idx="{{idx}}" data-img-idx="{{imgIdx}}"></image>
                         </block>
                     </view>
 
