--- a/pages/post/post.wxml
+++ b/pages/post/post.wxml
@@ -2,15 +2,15 @@
 <view>
   <swiper indicator-dots="true" circular="true" autoplay="{{true}}" interval="5000">
     <swiper-item>
-      <image src="/images/xiaoshuo/fanrenxiuxianzhuancongshu.png" />
+      <image src="https://dss2.bdstatic.com/70cFvnSh_Q1YnxGkpoWK1HF6hhy/it/u=4173935161,2371409429&fm=26&gp=0.jpg" />
     </swiper-item>
 
     <swiper-item>
-      <image src="/images/sheke/difengxianchuangye.png" />
+      <image src="https://ss1.bdstatic.com/70cFuXSh_Q1YnxGkpoWK1HF6hhy/it/u=3643604333,2007044152&fm=26&gp=0.jpg" />
     </swiper-item>
 
     <swiper-item>
-      <image src="/images/sheke/heitiane.png" />
+      <image src="https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=3581832740,2295218583&fm=26&gp=0.jpg" />
     </swiper-item>
 
     <!-- <swiper-item>
