--- a/pages/post/post-comment/post-comment.wxss
+++ b/pages/post/post-comment/post-comment.wxss
@@ -185,8 +185,8 @@
     margin: 0 5rpx 0 0;
     height: 65rpx;
     width: 65rpx;
-    transform: scale(0, 9);
-    margin-top: 2rpx;
+    transform: scale(0.9);
+    margin-top: 2px;
 }
 
 .input-box .submit-btn {
@@ -273,3 +273,4 @@
     height: 100%;
     width: 100%;
 }
+
