--- a/pages/post/post-comment/post-comment.wxss
+++ b/pages/post/post-comment/post-comment.wxss
@@ -162,7 +162,7 @@
 
 .input-box .input-item .speak-input {
     text-align: center;
-    color: #212121;
+    color: #443c3c59;
     height: 65rpx;
 }
 
@@ -196,7 +196,7 @@
     line-height: 60rpx;
     width: 120rpx;
     height: 60rpx;
-    background-color: #4a6141;
+    background-color: #1d87dd;
     border-radius: 5rpx;
     text-align: center;
     font-family: Microsoft YaHei;
@@ -214,9 +214,9 @@
     width: 100%;
     height: 60rpx;
     text-align: center;
-    border: 1px solid #5e1181;
-    border-radius: 10rpx;
-    background-color: #fbfb;
+    border: 1px solid #fdfdfd;
+    border-radius: 30rpx;
+    background-color: #fdfdfd;
     margin: 0 auto;
     padding: 25rpx 0;
 }
@@ -227,7 +227,7 @@
 }
 
 .send-more-box .more-btn-item .btn-txt{
-    color: #888888;
+    color: #f5f1f1;
     font-size: 24rpx;
     margin: 10rpx 0;
 }
