--- a/pages/post/post-comment/post-comment.wxss
+++ b/pages/post/post-comment/post-comment.wxss
@@ -274,3 +274,16 @@
     width: 100%;
 }
 
+.send-more-result-main .file-box.deleting{
+    animation:deleting 0.5s ease;
+    animation-fill-mode: forwards;
+}
+
+@keyframes deleting{
+    0%{
+        transform: scale(1);
+    }
+    100%{
+        transform: scale(0);
+    }
+}
